[gd_scene load_steps=3 format=3 uid="uid://ca1l10idnpapf"]

[ext_resource type="Script" uid="uid://bpu023hmmkkdp" path="res://addons/storyquest_bootstrap/new_storyquest_dialog.gd" id="1_1ir5d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_euw8d"]
bg_color = Color(0, 0, 0, 1)

[node name="StoryQuestDialogue" type="Window"]
oversampling_override = 1.0
title = "Create StoryQuest"
initial_position = 1
size = Vector2i(600, 400)
transient = true
script = ExtResource("1_1ir5d")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_euw8d")

[node name="PanelContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Title:"

[node name="TitleEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "My Quest"

[node name="FolderLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Folder Name:"

[node name="FolderEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "My Quest"
max_length = 20
emoji_menu_enabled = false

[node name="FullPathLabelLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Full Path:"

[node name="FullPathLabel" type="Label" parent="PanelContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1

[node name="ErrorsLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
fit_content = true

[node name="DescriptionLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionEdit" type="TextEdit" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "This quest is about..."
wrap_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "Create"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/GridContainer/TitleEdit" to="." method="_on_title_edit_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/GridContainer/FolderEdit" to="." method="_on_folder_edit_text_changed"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/DescriptionEdit" to="." method="_on_description_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer/CreateButton" to="." method="_on_create_button_pressed"]
